--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Registro", "Registro", "Home")</li>
+                    <li>@Html.ActionLink("Registro de Pacientes", "Index", "Pacientes")</li>
                 </ul>
             </div>
         </div>
