Se comenzo con la nueva interfaz

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,11 +2,23 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+
+
+
+
+<div class="container-fluid animated fadeInDown"  style="height:500px; width:100%; background-image:url(/img/banner.png) ">
+    <div class="slider_text animated fadeInUp" style="font-family: Poppins, sans-serif; font-size: 70px; text-transform: capitalize;letter-spacing: 2px; font-weight: 300">
+        <h1 style="color:white; " ;>
+            <span style="font-size:80px">Si cambias tu forma</span> <br>
+            de ver las cosas
+        </h1>
+        <p style="color: white; font-size: 40px;">veras que las cosas cambian.</p>
+
+    </div>
 </div>
+
+
+
 
 <div class="row">
     <div class="col-md-4">
@@ -28,4 +40,6 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
+
 </div>
+
