--- a/Views/Pacientes/Create.cshtml
+++ b/Views/Pacientes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Optica01.Models.Pacientes
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Crear nuevo registro";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
