--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,11 +8,16 @@
 
 <div class="container-fluid animated fadeInDown"  style="height:500px; width:100%; background-image:url(/img/banner.png) ">
     <div class="slider_text animated fadeInUp" style="font-family: Poppins, sans-serif; font-size: 70px; text-transform: capitalize;letter-spacing: 2px; font-weight: 300">
-        <h1 style="color:white; " ;>
-            <span style="font-size:80px">Si cambias tu forma</span> <br>
-            de ver las cosas
-        </h1>
-        <p style="color: white; font-size: 40px;">veras que las cosas cambian.</p>
+       
+        <div class="row justify-content-center">
+            <h1 style="color:white; " ;>
+                <br />
+                <br />
+                <span style="font-size:80px ">Si cambias tu forma</span> <br>
+                de ver las cosas
+            </h1>
+            <p style="color: white; font-size: 40px;">veras que las cosas cambian.</p>
+        </div>
 
     </div>
 </div>
