--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,18 +24,47 @@
 
         <div class="container ">
 
-            <img src="~/img/aris.jpg" width="100" />
+            <div class="row ">
 
-            <button type="button" class="btn btn-outline-primary btn-lg">@Html.ActionLink("Inicio", "Index", "Home")</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">@Html.ActionLink("Acerca de", "About", "Home")</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">@Html.ActionLink("Contacto", "Contact", "Home")</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">@Html.ActionLink("Registro", "Registro", "Home")</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">@Html.ActionLink("Registro de Pacientes", "Index", "Pacientes")</button>
+            
 
-           
+                <div class="col-sm-9 col-md-9 ">
 
 
+                    <img src="~/img/aris.jpg" width="100" />
 
+                    
+
+                        <button type="button" class="btn btn-outline-primary btn-lg">@Html.ActionLink("Inicio", "Index", "Home")</button>
+                        <button type="button" class="btn btn-outline-primary btn-lg">@Html.ActionLink("Pediatria", "About", "Home")</button>
+                        <button type="button" class="btn btn-outline-primary btn-lg">@Html.ActionLink("Geriatria", "Contact", "Home")</button>
+                        <button type="button" class="btn btn-outline-primary btn-lg">@Html.ActionLink("Contacto", "Registro", "Home")</button>
+                        <button type="button" class="btn btn-outline-primary btn-lg">@Html.ActionLink("Registro de Pacientes", "Index", "Pacientes")</button>
+
+                      
+
+
+
+                    </div>
+
+
+
+
+                    <div class="col-sm-3 col-md-3 alert alert-primary" role="alert">
+                        <div class="short_contact_list">
+                            <ul  > 
+                                <li style=" width:10px; list-style-image:url(/img/em.png )  " > <a> lic.dianahdzm@gmail.com    </a></li>
+                                <li style=" width:10px; list-style-image:url(/img/em.png)" ><a>  lic.miriamhdz@hotmail.com    </a></li>
+                                <li style=" list-style-image:url(/img/fo.png)"><a>  movil: 55-11-24-96-33</a></li>
+                                <li style=" list-style-image:url(/img/fo.png)"><a>   movil: 55-25-08-71-36</a></li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+
+
+                </div>
         </div>
 
 
