--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="container-fluid animated fadeInDown"  style="height:500px; width:100%; background-image:url(/img/banner.png) ">
     <div class="slider_text animated fadeInUp" style="font-family: Poppins, sans-serif; font-size: 70px; text-transform: capitalize;letter-spacing: 2px; font-weight: 300">
        
-        <div class="row justify-content-center">
+        <div class="col row justify-content-center">
             <h1 style="color:white; " ;>
                 <br />
                 <br />
