Actualizacion de index

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 
-<div class="container-fluid animated fadeInDown"  style="height:500px; width:100%; background-image:url(/img/banner.png) ">
+<div class="container-fluid animated fadeInDown col"  style="height:500px; width:100%; background-image:url(/img/banner.png) ">
     <div class="slider_text animated fadeInUp" style="font-family: Poppins, sans-serif; font-size: 70px; text-transform: capitalize;letter-spacing: 2px; font-weight: 300">
        
         <div class="col row justify-content-center">
@@ -26,25 +26,48 @@
 
 
 <div class="row">
-    <div class="col-md-4 ">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    
+
+        <div class="col-xl-4 col-md-4"  style="background:rgb(64, 149, 241)">
+            <div style="padding:70px">
+                <div class="icon">
+                    
+                </div>
+                <h3>Prevención</h3>
+                <p>
+                    En muchos casos no conocemos realmente que es lo que  afecta nuestra visión,
+                    algunos de los ejemplos son el uso excesivo de computadora, gafas de sol solo en el verano,
+                    los rayos UV no toman vacaiones he ir con ul licenciado en optometria solo cuando hay problemas.
+                </p>
+
+            </div>
+        </div>
+
+
+
+   
+        <div class="col-xl-4 col-md-4" style="background:rgb(0, 123, 255)">
+            <div style="padding:70px">
+                <div class="icon">
+                    <i class="flaticon-emergency-call"></i>
+                </div>
+                <h3>¿Cuando ir al especialista?</h3>
+                <p>Deberiamos acudir con un licenciado en optometria por lo menos una vez al año, para descartar o detectar poblemas visuales a tiempo y con esto darle seguimiento a cualquier ametropia de manera oportuna. La salud visual no es solo "ver bien".  </p>
+
+            </div>
+        </div>
+
+
+        <div class="col-xl-4 col-md-4" style="background:rgb(64, 149, 241)">
+            <div style="padding:70px">
+                <div class="icon">
+                    <i class="flaticon-first-aid-kit"></i>
+                </div>
+                <h3>Ir al Consultorio Visual</h3>
+                <p>El licenciado en optometria realizara una consulta visial completa, mediante una exploracion de tu vista con herramientas que ayudaran a diagnosticar alguna patologia, ametropia o problemas de vision binocular. </p>
+
+            </div>
+        </div>
 
 </div>
 
