--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -74,11 +74,105 @@
 
     <div class="container-fluid ">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
-        </footer>
+       
+
+
+       
+
     </div>
+
+    
+        <footer >
+            <div class="container-fluid" Style="background: rgb(46,46,46)">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-4 col-md-6 col-lg-4">
+                            <div class="footer_widget">
+                                
+                                <p style="color:white; font-size:25px">
+                                    Nuestras Redes
+                                </p>
+                                <div class="navbar-nav">
+                                    <ul style="list-style:none">
+                                        <li>
+                                            <a href="https://www.facebook.com/opticaarisvision/">
+                                                <img src="~/img/fac.png" >
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.facebook.com/opticaarisvision/">
+                                                <img src="~/img/inst.png">
+                                            </a>
+                                        </li>
+                                       
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
+                            <div class="footer_widget">
+                                <h3 style="color:white; font-size:25px">
+                                    Unidades de atención
+                                </h3>
+                                <ul style="list-style:none">
+                                    <li><a style="color:white" href="https://www.cics-sto.ipn.mx/">CICS  IPN</a></li>
+                                    <li><a style="color:white" href="http://www.hgm.salud.gob.mx/">Hospital General</a></li>
+
+                                </ul>
+
+                            </div>
+                        </div>
+                        <div class="col-xl-2 col-md-6 col-lg-2">
+                            <div class="footer_widget">
+                                <h3 style="color:white; font-size:25px">
+                                    Links útiles
+                                </h3>
+                                <ul style="list-style:none; ">
+                                    <li><a style="color:white" href="https://es.wikipedia.org/wiki/Optometr%C3%ADa">¿Qué es la optometria?</a></li>
+                                    
+                                    <li><a style="color:white" href="http://www.imss.gob.mx/">Imss</a></li>
+                                    <li><a style="color:white" href="https://www.gob.mx/issste"> Issste</a></li>
+                                    <li><a style="color:white" href="https://www.ipn.mx/"> IPN</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6 col-lg-3">
+                            <div class="footer_widget">
+                                <h3 style="color:white; font-size:25px">
+                                    Dirección
+                                </h3>
+                                <p style="color:white">
+                                    Sierra madre del norte  <br>
+                                    #92, Colonia Benito Juarez <br>
+                                    Naucalpan de Juarez
+                                </p>
+                                <p style="color:white">
+                                    Jacarandas  <br>
+                                    #54, San Bartolome Coatepec <br>
+                                    Huixquilucan
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copy-right_text" style="background:black">
+                <div class="container">
+                    <div class="footer_border"></div>
+                    <div class="row">
+                        <div class="col-xl-12">
+                            <p class="copy_right text-center" style="color:rgb(200,200,200)">
+
+                                Copyright &copy;
+                                <script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Desarrollado por Ing. Eduardo Hernandez
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    
 
 
 
