Se mejoro corectamente el nav

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -34,9 +34,8 @@
 
         <div class="col-xl-4 col-md-4"  style="background:rgb(64, 149, 241)">
             <div style="padding:70px">
-                <div class="icon">
-                    
-                </div>
+               
+                <img src="~/img/opp.png" />
                 <h3>Prevención</h3>
                 <p>
                     En muchos casos no conocemos realmente que es lo que  afecta nuestra visión,
@@ -52,9 +51,8 @@
    
         <div class="col-xl-4 col-md-4" style="background:rgb(0, 123, 255)">
             <div style="padding:70px">
-                <div class="icon">
-                    <i class="flaticon-emergency-call"></i>
-                </div>
+                
+                <img src="~/img/oppp.png" />
                 <h3>¿Cuando ir al especialista?</h3>
                 <p>Deberiamos acudir con un licenciado en optometria por lo menos una vez al año, para descartar o detectar poblemas visuales a tiempo y con esto darle seguimiento a cualquier ametropia de manera oportuna. La salud visual no es solo "ver bien".  </p>
 
@@ -64,9 +62,7 @@
 
         <div class="col-xl-4 col-md-4" style="background:rgb(64, 149, 241)">
             <div style="padding:70px">
-                <div class="icon">
-                    <i class="flaticon-first-aid-kit"></i>
-                </div>
+                <img src="~/img/opppp.png" />
                 <h3>Ir al Consultorio Visual</h3>
                 <p>El licenciado en optometria realizara una consulta visial completa, mediante una exploracion de tu vista con herramientas que ayudaran a diagnosticar alguna patologia, ametropia o problemas de vision binocular. </p>
 
