--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,32 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿<div class="welcome_docmed_area" id="pediatria">
+    <div class="container">
+        <div class="row" style="height:600px">
+            <div class="col-xl-6 col-lg-6">
+                <div style="position: relative;">
+                    <div style="width:200px; height:200px; position: absolute; left: 0px; top: 0px; background:black"> <img src="~/img/bbbb.jpg" style="width:300px"/> </div>
+                    <div style="width:200px; height:200px; position: absolute; left: 200px; top: 200px; background:pink" > <img src="~/img/bb5.jpg" style="width:300px" /></div>
+                </div>
 
-<p>Use this area to provide additional information.</p>
+
+            </div>
+            <div class="col-xl-6 col-lg-6">
+                <div class="welcome_docmed_info">
+                    <h2>Pediatria</h2>
+                    <h3>
+                        Consultas infantiles<br>
+                    </h3>
+                    <p>
+                        Brindamos atencion a pacientes desde los 2 meses hasta los 18 años de edad.
+                        Una de las principales causas que ocasiona el bajo rendimiento escolar es debido a problemas visiales.
+                    </p>
+                    <ul>
+                        <li> <i class="flaticon-right"></i> Miopia. </li>
+                        <li> <i class="flaticon-right"></i> Astigmatismo.</li>
+                        <li> <i class="flaticon-right"></i> Hipermetropia. </li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
