--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,30 +1,32 @@
 ﻿<div class="welcome_docmed_area" id="pediatria">
     <div class="container">
-        <div class="row" style="height:600px">
+        <div class="row" style="height:700px">
             <div class="col-xl-6 col-lg-6">
                 <div style="position: relative;">
-                    <div style="width:200px; height:200px; position: absolute; left: 0px; top: 0px; background:black"> <img src="~/img/bbbb.jpg" style="width:300px"/> </div>
-                    <div style="width:200px; height:200px; position: absolute; left: 200px; top: 200px; background:pink" > <img src="~/img/bb5.jpg" style="width:300px" /></div>
+                    <div  style=" width:200px; height:200px; position: absolute; left: 0px; top: 0px; background:black"> <img src="~/img/bbbb.jpg" style="width:350px"/> </div>
+                    <div style="width:200px; height:200px; position: absolute; left: 200px; top: 200px; background:pink" > <img src="~/img/bb5.jpg" style="width:350px" /></div>
                 </div>
 
 
             </div>
             <div class="col-xl-6 col-lg-6">
                 <div class="welcome_docmed_info">
-                    <h2>Pediatria</h2>
-                    <h3>
+                    <h4 style=" text-decoration:underline; text-decoration-color:cyan">Pediatria</h4>
+                    <br />
+                    <h1>
                         Consultas infantiles<br>
-                    </h3>
-                    <p>
+                    </h1>
+                    <p style="padding:50px; font-size:22px; color:dimgrey">
                         Brindamos atencion a pacientes desde los 2 meses hasta los 18 años de edad.
                         Una de las principales causas que ocasiona el bajo rendimiento escolar es debido a problemas visiales.
                     </p>
-                    <ul>
-                        <li> <i class="flaticon-right"></i> Miopia. </li>
-                        <li> <i class="flaticon-right"></i> Astigmatismo.</li>
-                        <li> <i class="flaticon-right"></i> Hipermetropia. </li>
-                    </ul>
-
+                    
+                        <ul style="position: absolute; left:100px; list-style-image:url(/img/verrr.png ); font-size:20px">
+                            <li>  Miopia. </li>
+                            <li> Astigmatismo.</li>
+                            <li>  Hipermetropia. </li>
+                        </ul>
+                   
                 </div>
             </div>
         </div>
