--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -5,11 +5,11 @@
                 
                 <div class="container">
                     <div class="row">
-                        <div class="col"><img src="~/img/bbbb.jpg" style="width:300px" /></div>
+                        <div class="col animated fadeInUp" ><img src="~/img/bbbb.jpg" style="border-radius:15px;width:300px" /></div>
                         <div class="col"></div>
                         <div class="w-100"></div>
                         <div class="col"></div>
-                        <div class="col"><img src="~/img/bb5.jpg" style="width:300px" /></div>
+                        <div class="col animated fadeInDown" style="margin-bottom:25px"><img src="~/img/bb5.jpg" style="border-radius:15px;width:300px" /></div>
                     </div>
                 </div>
 
