--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                             <a class="nav-item nav-link">@Html.ActionLink("Geriatria", "Contact", "Home")</a>
                             <a class="nav-item nav-link">@Html.ActionLink("Contacto", "Registro", "Home") </a>
                             <a class="nav-item nav-link">@Html.ActionLink("Pacientes", "Index", "Pacientes")</a>
+                            <a class="navbar-brand">@Html.ActionLink("Ofertas", "Ofertas", "Home") </a>
+
+
 
 
                         </div>
