--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 
-<div class=" col-xl-12 container-fluid animated fadeInDown col"  style="height:500px; width:100%; background-image:url(/img/banner.png) ">
+<div class=" col-xl-12 container animated fadeInDown col"  style="height:500px; width:100%; background-image:url(/img/banner.png) ">
     <div class="slider_text animated fadeInUp" style="font-family: Poppins, sans-serif; font-size: 70px; text-transform: capitalize;letter-spacing: 2px; font-weight: 300">
        
         <div class=" row justify-content-center ">
