--- a/Views/Home/Pediatria.cshtml
+++ b/Views/Home/Pediatria.cshtml
@@ -1,5 +1,5 @@
 ﻿
-    <div class="container-fluid">
+    <div class="container">
         <div class="row" >
             <div class=" col-lg-6 col-md-6">
                 
@@ -14,7 +14,7 @@
                 </div>
 
             </div>
-            <div class=" col-lg-6 col-md-6 " ">
+            <div class=" col-lg-6 col-md-6 " >
                 <div class="container">
                     <h4 style=" text-decoration:underline; text-decoration-color:cyan">Pediatria</h4>
                     <br />
