--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,8 +18,15 @@
 <body>
 
 
-  
-   
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=5568154560&text=Hola%20en%20que%20te%20podemos%20ayudar." class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
+
+
+
+
+
 
 
     <div class="container-fluid ">
@@ -32,16 +39,16 @@
                 <img src="~/img/aris.jpg" width="100" />
 
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                  
+
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                             <a class="navbar-brand">@Html.ActionLink("Inicio", "Index", "Home") </a>
-                            <a class="navbar-brand">@Html.ActionLink("Pediatria", "About", "Home") </a>
-                            <a class="nav-item nav-link">@Html.ActionLink("Geriatria", "Contact", "Home")</a>
-                            <a class="nav-item nav-link">@Html.ActionLink("Contacto", "Registro", "Home") </a>
+                            <a class="navbar-brand">@Html.ActionLink("Pediatria", "Pediatria", "Home") </a>
+                            <a class="nav-item nav-link">@Html.ActionLink("Geriatria", "Geriatria", "Home")</a>
+                            <a class="nav-item nav-link">@Html.ActionLink("Contacto", "Contacto", "Home") </a>
                             <a class="nav-item nav-link">@Html.ActionLink("Pacientes", "Index", "Pacientes")</a>
                             <a class="navbar-brand">@Html.ActionLink("Ofertas", "Ofertas", "Home") </a>
 
@@ -79,106 +86,106 @@
 
     <div class="container-fluid ">
         @RenderBody()
-       
 
 
-       
+
+
 
     </div>
 
-    
-        <footer >
-            <div class="container-fluid" Style="background: rgb(46,46,46)">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-4 col-md-6 col-lg-3">
-                            <div class="footer_widget">
-                                
-                                <p style="color:white; font-size:25px">
-                                    Nuestras Redes
-                                </p>
-                                <div class="navbar-nav">
-                                    <ul style="list-style:none">
-                                        <li>
-                                            <a href="https://www.facebook.com/opticaarisvision/">
-                                                <img src="~/img/fac.png" >
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.facebook.com/opticaarisvision/">
-                                                <img src="~/img/inst.png">
-                                            </a>
-                                        </li>
-                                       
-                                    </ul>
-                                </div>
 
+    <footer>
+        <div class="container-fluid" Style="background: rgb(46,46,46)">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 col-md-6 col-lg-3">
+                        <div class="footer_widget">
+
+                            <p style="color:white; font-size:25px">
+                                Nuestras Redes
+                            </p>
+                            <div class="navbar-nav">
+                                <ul style="list-style:none">
+                                    <li>
+                                        <a href="https://www.facebook.com/opticaarisvision/">
+                                            <img src="~/img/fac.png">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.facebook.com/opticaarisvision/">
+                                            <img src="~/img/inst.png">
+                                        </a>
+                                    </li>
+
+                                </ul>
                             </div>
-                        </div>
-                        <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
-                            <div class="footer_widget">
-                                <h3 style="color:white; font-size:25px">
-                                    Unidades de atención
-                                </h3>
-                                <br />
-                                <a style="color:white; font-size:18px " href="https://www.cics-sto.ipn.mx/">CICS  IPN</a><br />
-                                <a style="color:white; font-size:18px " href="http://www.hgm.salud.gob.mx/">Hospital General</a>
 
-
-
-                            </div>
-                        </div>
-                        <div class="col-xl-2 col-md-6 col-lg-3">
-                            <div class="footer_widget">
-                                <h3 style="color:white; font-size:25px">
-                                    Links útiles
-                                </h3>
-
-                                <br />
-                                    <a style="color:white; font-size:18px " href="https://es.wikipedia.org/wiki/Optometr%C3%ADa">Optometria</a><br />
-                                    
-                                    <a style="color:white; font-size:18px " href="http://www.imss.gob.mx/">Imss</a><br />
-                                    <a style="color:white; font-size:18px " href="https://www.gob.mx/issste"> Issste</a><br />
-                                    <a style="color:white; font-size:18px " href="https://www.ipn.mx/"> IPN</a>
-                                
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-md-6 col-lg-3">
-                            <div class="footer_widget">
-                                <h3 style="color:white; font-size:25px">
-                                    Dirección
-                                </h3>
-                                <p style="color:white">
-                                    Sierra madre del norte  <br>
-                                    #92, Colonia Benito Juarez <br>
-                                    Naucalpan de Juarez
-                                </p>
-                                <p style="color:white">
-                                    Jacarandas  <br>
-                                    #54, San Bartolome Coatepec <br>
-                                    Huixquilucan
-                                </p>
-                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="copy-right_text" style="background:black">
-                <div class="container">
-                    <div class="footer_border"></div>
-                    <div class="row">
-                        <div class="col-xl-12">
-                            <p class="copy_right text-center" style="color:rgb(200,200,200)">
+                    <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
+                        <div class="footer_widget">
+                            <h3 style="color:white; font-size:25px">
+                                Unidades de atención
+                            </h3>
+                            <br />
+                            <a style="color:white; font-size:18px " href="https://www.cics-sto.ipn.mx/">CICS  IPN</a><br />
+                            <a style="color:white; font-size:18px " href="http://www.hgm.salud.gob.mx/">Hospital General</a>
 
-                                Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Desarrollado por Ing. Eduardo Hernandez
+
+
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-6 col-lg-3">
+                        <div class="footer_widget">
+                            <h3 style="color:white; font-size:25px">
+                                Links útiles
+                            </h3>
+
+                            <br />
+                            <a style="color:white; font-size:18px " href="https://es.wikipedia.org/wiki/Optometr%C3%ADa">Optometria</a><br />
+
+                            <a style="color:white; font-size:18px " href="http://www.imss.gob.mx/">Imss</a><br />
+                            <a style="color:white; font-size:18px " href="https://www.gob.mx/issste"> Issste</a><br />
+                            <a style="color:white; font-size:18px " href="https://www.ipn.mx/"> IPN</a>
+
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6 col-lg-3">
+                        <div class="footer_widget">
+                            <h3 style="color:white; font-size:25px">
+                                Dirección
+                            </h3>
+                            <p style="color:white">
+                                Sierra madre del norte  <br>
+                                #92, Colonia Benito Juarez <br>
+                                Naucalpan de Juarez
+                            </p>
+                            <p style="color:white">
+                                Jacarandas  <br>
+                                #54, San Bartolome Coatepec <br>
+                                Huixquilucan
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
-        </footer>
-    
+        </div>
+        <div class="copy-right_text" style="background:black">
+            <div class="container">
+                <div class="footer_border"></div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <p class="copy_right text-center" style="color:rgb(200,200,200)">
+
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Desarrollado por Ing. Eduardo Hernandez
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 
 
