--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="https://api.whatsapp.com/send?phone=5568154560&text=Hola%20en%20que%20te%20podemos%20ayudar." class="float" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=+5215568154560&text=Hola%20en%20que%20te%20podemos%20ayudar." class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
     </a>
 
