--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,10 +48,9 @@
                             <a class="navbar-brand">@Html.ActionLink("Inicio", "Index", "Home") </a>
                             <a class="navbar-brand">@Html.ActionLink("Pediatria", "Pediatria", "Home") </a>
                             <a class="nav-item nav-link">@Html.ActionLink("Geriatria", "Geriatria", "Home")</a>
-                            <a class="nav-item nav-link">@Html.ActionLink("Contacto", "Contacto", "Home") </a>
-                            <a class="nav-item nav-link">@Html.ActionLink("Pacientes", "Index", "Pacientes")</a>
+                            <a class="nav-item nav-link">@Html.ActionLink("Contacto", "Contacto", "Home") </a>                            
                             <a class="navbar-brand">@Html.ActionLink("Ofertas", "Ofertas", "Home") </a>
-
+                            <a class="nav-item nav-link">@Html.ActionLink("Pacientes", "Login", "Home")</a>
 
 
 
